--- a/src/app/pagesestudiantes/clase-one/modal-resolucion-quizz/modal-resolucion-quizz.page.html
+++ b/src/app/pagesestudiantes/clase-one/modal-resolucion-quizz/modal-resolucion-quizz.page.html
@@ -14,10 +14,14 @@
     </ion-item>
     <div class="mb-2 border-bottom" *ngFor="let xl of x.respuestas; let il = index">
       <ion-item class="pt-0 mt-0">
-        <ion-checkbox slot="start" name="{{xl.idrespuesta}}" id="{{x.idrespuesta}}">
+        <ion-checkbox slot="start" name="{{xl.idrespuesta}}" id="{{xl.idrespuesta}}" (click)="seleccionarRespuesta(xl.idrespuesta, x.idquizz)">
         </ion-checkbox>
         <p>{{xl.respuesta}}</p>
       </ion-item>
     </div>
   </div>
+
+  <button class="btn btn-success w-100" (click)="guardarRespuestas()">
+    Finalizar
+  </button>
 </ion-content>
