--- a/src/app/pagesestudiantes/clase-one/clase-one.page.html
+++ b/src/app/pagesestudiantes/clase-one/clase-one.page.html
@@ -75,7 +75,7 @@
     <ion-list-header class="mb-0 pb-0"> <b class="text-primary mb-0 pb-0">Puzzle</b> </ion-list-header>
     <ion-item *ngFor="let x of puzzleRespondido" color="light">
       <ion-label>
-        <h3><b>Puntaje: </b>{{x.puntaje}}</h3>
+        <h3><b>Puntaje: </b>{{x.puntaje}} - <b>Nombre: </b>{{x.titulo}}</h3>
       </ion-label>
     </ion-item>
   </ion-list>
