--- a/src/app/pagesestudiantes/clase-one/modal-resolucion-puzzle/modal-resolucion-puzzle.page.html
+++ b/src/app/pagesestudiantes/clase-one/modal-resolucion-puzzle/modal-resolucion-puzzle.page.html
@@ -10,3 +10,5 @@
 <ion-content style="position: relative;">
   <div id="app-puzzle"></div>
 </ion-content>
+
+<app-contador [contador]="contador" *ngIf="contador < 4"></app-contador>
